src/06_components/_buttons.scss
// ==========================================================================
// Buttons
// ==========================================================================

.button {
    display: inline-block;
    margin-bottom: map-get($spaces, xxs);
    padding: $button-padding-sm;
    border: $button-outlined-border-width solid $button-filled-bg;
    border-radius: $button-border-radius;
    background-color: $button-filled-bg;
    color: $button-filled-color;
    text-decoration: none;
    text-transform: uppercase;
    font-size: inherit;
    transition: all 1s ease;

    &.button--primary {

        &:hover,
        &:focus,
        &:active {
            border-color: darken($button-primary-bg, 25%);
            background-color: darken($button-primary-bg, 10%);
            color: $button-primary-color;
        }
    }

    &.button--secondary {

        &:hover,
        &:focus,
        &:active {
            border-color: darken($button-secondary-bg, 25%);
            background-color: darken($button-secondary-bg, 10%);
            color: $button-secondary-color;
        }
    }
    
    &.button--tertiary {
        
        &:hover,
        &:focus,
        &:active {
            border-color: darken($button-tertiary-bg, 25%);
            background-color: darken($button-tertiary-bg, 10%);
            color: $button-tertiary-color;
        }
    }

    // Button Sizes
    &--xxxs { 
        padding: $button-padding-xxxs; 
        font-size: $button-size-xxxs;
    }
    &--xxs { 
        padding: $button-padding-xxs; 
        font-size: $button-size-xxxs;
    }
    &--xs { 
        padding: $button-padding-xs; 
        font-size: $button-size-xxs;
    }
    &--sm { 
        padding: $button-padding-sm;
        font-size: $button-size-xs;
    }
    &--md { 
        padding: $button-padding-md;
        font-size: $button-size-xs;
    }
    &--lg { 
        padding: $button-padding-lg;
        font-size: $button-size-md;
    }
    &--xl { 
        padding: $button-padding-xl;
        font-size: $button-size-lg;
    }
    &--xxl { 
        padding: $button-padding-xxl;
        font-size: $button-size-lg;
    }
    &--xxxl { 
        padding: $button-padding-xxxl;
        font-size: $button-size-lg;
    }

    &--block {
        width: 100%;
        text-align: center;
    }
}

.button--filled {

    &:hover,
    &:focus,
    &:active {
        border-color: darken($button-filled-bg, 25%);
        background-color: darken($button-filled-bg, 10%);
        color: $button-filled-color;
    }

    &.button--primary {
        border-color: $button-primary-bg;
        background-color: $button-primary-bg;
        color: $button-primary-color;
    }

    // Button Colors
    &.button--secondary {
        border-color: $button-secondary-bg;
        background-color: $button-secondary-bg;
        color: $button-secondary-color;
    }

    &.button--tertiary {
        border-color: $button-tertiary-bg;
        background-color: $button-tertiary-bg;
        color: $button-tertiary-color;
    }
}

.button--outlined {
    background-color: transparent;
    color: $button-outlined-color;

    &:hover,
    &:focus,
    &:active {
        border-color: darken($button-outlined-color, 25%);
        background-color: darken($button-outlined-color, 10%);
        color: $button-filled-color;
    }

    &.button--primary {
        border-color: $button-primary-bg;
        color: $button-primary-bg;
    }

    &.button--secondary {
        border-color: $button-secondary-bg;
        color: $button-secondary-bg;
    }

    &.button--tertiary {
        border-color: $button-tertiary-bg;
        color: $button-tertiary-bg;
    }
}

.button--clear {
    border-color: transparent;
    background-color: transparent;
    color: $button-clear-color;

    &:hover,
    &:focus,
    &:active {
        border-bottom: 2px solid $button-clear-color;
        color: $button-clear-color;
    }
}

